--- a/ForeScore.WebMVC/Views/Post/Index.cshtml
+++ b/ForeScore.WebMVC/Views/Post/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Post Index</h2>
 
 <p>
     @Html.ActionLink("Create New", "SelectRound")
@@ -13,7 +13,7 @@
     <div class="row">
 
         <div class="col-lg-6">
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading">Your Feed</div>
                 <div class="panel-body">
                     <table class="table table-bordered table-striped">
@@ -43,7 +43,7 @@
 
 
         <div class="col-lg-6">
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading">Your Posts</div>
                 <div class="panel-body">
                     <table class="table table-bordered table-striped">
