--- a/ForeScore.WebMVC/Views/Round/Create.cshtml
+++ b/ForeScore.WebMVC/Views/Round/Create.cshtml
@@ -12,65 +12,67 @@
             Round Index
         </a>
     </div>
-    <div class="panel-heading col-lg-3"></div>
 
-    <div class="row col-lg-12">
-        <div class="panel panel-default">
-            <div class="panel-body panel-default">
-                <table class="table table-bordered table-striped">
-                    <thead>
-                        <tr>
-                            <th scope="row">
-                                @Html.DisplayNameFor(model => model.Name)
-                            </th>
-                            <th scope="row">
-                                @Html.DisplayNameFor(model => model.Slope)
-                            </th>
-                            <th scope="row">
-                                @Html.DisplayNameFor(model => model.Rating)
-                            </th>
-                            <th scope="row">
-                                @Html.DisplayNameFor(model => model.Par)
-                            </th>
-                            <th scope="row">
-                                @Html.DisplayNameFor(model => model.City)
-                            </th>
-                            <th scope="row">
-                                @Html.DisplayNameFor(model => model.StateOfResidence)
-                            </th>
-                            <th scope="row"></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model)
-                        {
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-default">
+                <div class="panel-heading"> Courses</div>
+                <div class="panel-body panel-default">
+                    <table class="table table-bordered table-striped">
+                        <thead>
                             <tr>
-                                <td scope="row">
-                                    @Html.DisplayFor(modelItem => item.Name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Slope)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Rating)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Par)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.City)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.StateOfResidence)
-                                </td>
-
-                                <td>
-                                    @Html.ActionLink("Select This Course", "SelectCourse", new { id = item.CourseId })
-                                </td>
+                                <th scope="row">
+                                    @Html.DisplayNameFor(model => model.Name)
+                                </th>
+                                <th scope="row">
+                                    @Html.DisplayNameFor(model => model.Slope)
+                                </th>
+                                <th scope="row">
+                                    @Html.DisplayNameFor(model => model.Rating)
+                                </th>
+                                <th scope="row">
+                                    @Html.DisplayNameFor(model => model.Par)
+                                </th>
+                                <th scope="row">
+                                    @Html.DisplayNameFor(model => model.City)
+                                </th>
+                                <th scope="row">
+                                    @Html.DisplayNameFor(model => model.StateOfResidence)
+                                </th>
+                                <th scope="row"></th>
                             </tr>
-                        }
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td scope="row">
+                                        @Html.DisplayFor(modelItem => item.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Slope)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Rating)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Par)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.City)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.StateOfResidence)
+                                    </td>
+
+                                    <td>
+                                        @Html.ActionLink("Select This Course", "SelectCourse", new { id = item.CourseId })
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
