--- a/ForeScore.WebMVC/Views/Course/Details.cshtml
+++ b/ForeScore.WebMVC/Views/Course/Details.cshtml
@@ -10,213 +10,216 @@
     <br />
 
     <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-info">
+                <div class="panel-heading">Course Information</div>
+                <div class="panel-body">
+                    <dl class="dl-horizontal">
 
-        <div class="panel panel-primary col-lg-5">
-            <div class="panel panel-heading">Course Information</div>
-            <div class="panel-body">
-                <dl class="dl-horizontal">
+                        @Html.HiddenFor(model => model.CourseId)
 
-                    @Html.HiddenFor(model => model.CourseId)
+                        <dt>
+                            Course Name:
+                        </dt>
 
-                    <dt>
-                        Course Name:
-                    </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.Name)
+                        </dd>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.Name)
-                    </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Par):
+                        </dt>
 
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Par):
-                    </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.Par)
+                        </dd>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.Par)
-                    </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Slope):
+                        </dt>
 
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Slope):
-                    </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.Slope)
+                        </dd>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.Slope)
-                    </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Rating):
+                        </dt>
 
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Rating):
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.Rating)
-                    </dd>
-                </dl>
-                <br />
-                <br />
-                <br />
-            </div>
-
-        </div>
-        <div class="panel col-lg-2"></div>
-        <div class="panel panel-primary col-lg-5">
-            <div class="panel panel-heading">Contact Information</div>
-            <div class="panel-body">
-                <dl class="dl-horizontal">
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Address):
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.Address)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.City):
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.City)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.StateOfResidence):
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.StateOfResidence)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.ZipCode):
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.ZipCode)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.PhoneNumber):
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.PhoneNumber)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.EmailAddress):
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.EmailAddress)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Website):
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.Website)
-                    </dd>
-
-                </dl>
+                        <dd>
+                            @Html.DisplayFor(model => model.Rating)
+                        </dd>
+                    </dl>
+                </div>
             </div>
         </div>
-
     </div>
 
 
     <div class="row">
-        <div class="panel panel-primary col-lg-12">
-            <div class="panel panel-heading">Front Nine</div>
-            <div class="panel-body">
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th class="hole" scope="col">
-                                Hole
-                            </th>
-                            @for (int i = 0; i < Model.FrontNine.Count; i++)
-                            {
-                                <th>
-                                    @Html.DisplayFor(model => Model.FrontNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
+        <div class="col-lg-12">
+            <div class="panel panel-primary">
+                <div class="panel-heading">Front Nine</div>
+                <div class="panel-body">
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th class="hole" scope="col">
+                                    Hole
                                 </th>
-                            }
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th class="par" scope="col">
-                                Par
-                            </th>
-                            @for (int i = 0; i < Model.FrontNine.Count; i++)
-                            {
-                                <td>
-                                    @Html.DisplayFor(model => Model.FrontNine[i].Par, new { htmlAttributes = new { @class = "form-control", } })
-                                </td>
-                            }
-                        </tr>
+                                @for (int i = 0; i < Model.FrontNine.Count; i++)
+                                {
+                                    <th>
+                                        @Html.DisplayFor(model => Model.FrontNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
+                                    </th>
+                                }
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th class="par" scope="col">
+                                    Par
+                                </th>
+                                @for (int i = 0; i < Model.FrontNine.Count; i++)
+                                {
+                                    <td>
+                                        @Html.DisplayFor(model => Model.FrontNine[i].Par, new { htmlAttributes = new { @class = "form-control", } })
+                                    </td>
+                                }
+                            </tr>
 
-                        <tr>
-                            <th class="distance" scope="col">
-                                Distance (Yards)
-                            </th>
-                            @for (int i = 0; i < Model.FrontNine.Count; i++)
-                            {
-                                <td>
-                                    @Html.DisplayFor(model => Model.FrontNine[i].Distance, new { htmlAttributes = new { @class = "form-control", } })
-                                </td>
-                            }
-                        </tr>
-                    </tbody>
+                            <tr>
+                                <th class="distance" scope="col">
+                                    Distance (Yards)
+                                </th>
+                                @for (int i = 0; i < Model.FrontNine.Count; i++)
+                                {
+                                    <td>
+                                        @Html.DisplayFor(model => Model.FrontNine[i].Distance, new { htmlAttributes = new { @class = "form-control", } })
+                                    </td>
+                                }
+                            </tr>
+                        </tbody>
 
-                </table>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
     <div class="row">
-        <div class="panel panel-primary col-lg-12">
-            <div class="panel panel-heading">Back Nine</div>
-            <div class="panel-body">
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th class="hole" scope="col">
-                                Hole
-                            </th>
-                            @for (int i = 0; i < Model.BackNine.Count; i++)
-                            {
-                                <th>
-                                    @Html.DisplayFor(model => Model.BackNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
+        <div class="col-lg-12">
+            <div class="panel panel-primary">
+                <div class="panel-heading">Back Nine</div>
+                <div class="panel-body">
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th class="hole" scope="col">
+                                    Hole
                                 </th>
-                            }
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th class="par" scope="col">
-                                Par
-                            </th>
-                            @for (int i = 0; i < Model.BackNine.Count; i++)
-                            {
-                                <td>
-                                    @Html.DisplayFor(model => Model.BackNine[i].Par, new { htmlAttributes = new { @class = "form-control", } })
-                                </td>
-                            }
-                        </tr>
+                                @for (int i = 0; i < Model.BackNine.Count; i++)
+                                {
+                                    <th>
+                                        @Html.DisplayFor(model => Model.BackNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
+                                    </th>
+                                }
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th class="par" scope="col">
+                                    Par
+                                </th>
+                                @for (int i = 0; i < Model.BackNine.Count; i++)
+                                {
+                                    <td>
+                                        @Html.DisplayFor(model => Model.BackNine[i].Par, new { htmlAttributes = new { @class = "form-control", } })
+                                    </td>
+                                }
+                            </tr>
 
-                        <tr>
-                            <th class="distance" scope="col">
-                                Distance (Yards)
-                            </th>
-                            @for (int i = 0; i < Model.BackNine.Count; i++)
-                            {
-                                <td>
-                                    @Html.DisplayFor(model => Model.BackNine[i].Distance, new { htmlAttributes = new { @class = "form-control", } })
-                                </td>
-                            }
-                        </tr>
-                    </tbody>
+                            <tr>
+                                <th class="distance" scope="col">
+                                    Distance (Yards)
+                                </th>
+                                @for (int i = 0; i < Model.BackNine.Count; i++)
+                                {
+                                    <td>
+                                        @Html.DisplayFor(model => Model.BackNine[i].Distance, new { htmlAttributes = new { @class = "form-control", } })
+                                    </td>
+                                }
+                            </tr>
+                        </tbody>
 
-                </table>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-info">
+                <div class="panel-heading">Contact Information</div>
+                <div class="panel-body">
+                    <dl class="dl-horizontal">
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Address):
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Address)
+                        </dd>
+
+                        <dt>
+                            @Html.DisplayNameFor(model => model.City):
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.City)
+                        </dd>
+
+                        <dt>
+                            @Html.DisplayNameFor(model => model.StateOfResidence):
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.StateOfResidence)
+                        </dd>
+
+                        <dt>
+                            @Html.DisplayNameFor(model => model.ZipCode):
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.ZipCode)
+                        </dd>
+
+                        <dt>
+                            @Html.DisplayNameFor(model => model.PhoneNumber):
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.PhoneNumber)
+                        </dd>
+
+                        <dt>
+                            @Html.DisplayNameFor(model => model.EmailAddress):
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.EmailAddress)
+                        </dd>
+
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Website):
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Website)
+                        </dd>
+
+                    </dl>
+                </div>
             </div>
         </div>
     </div>
