--- a/ForeScore.WebMVC/Views/Course/Edit.cshtml
+++ b/ForeScore.WebMVC/Views/Course/Edit.cshtml
@@ -10,15 +10,15 @@
 
     @Html.HiddenFor(model => model.CourseId)
 
-    <div class="container">
-        <h2>Add A Course</h2>
+<div class="container">
+    <h2>Add A Course</h2>
 
-        <br />
+    <br />
 
-        <div class="row">
-
-            <div class="panel panel-primary col-lg-5">
-                <div class="panel panel-heading">Course Information</div>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-info">
+                <div class="panel-heading">Course Information</div>
                 <div class="panel-body form-horizontal">
 
                     <div class="form-group">
@@ -30,27 +30,6 @@
                     </div>
 
                     <div class="form-group">
-                        <div class="col-md-10">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-md-10">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-md-10">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-md-10">
-                        </div>
-                    </div>
-
-
-                    <div class="form-group">
                         @Html.LabelFor(model => model.Slope, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.Slope, new { htmlAttributes = new { @class = "form-control" } })
@@ -59,51 +38,12 @@
                     </div>
 
                     <div class="form-group">
-                        <div class="col-md-10">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-md-10">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-md-10">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-md-10">
-                        </div>
-                    </div>
-
-
-                    <div class="form-group">
                         @Html.LabelFor(model => model.Rating, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.Rating, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.Rating, "", new { @class = "text-danger" })
                         </div>
                     </div>
-
-                    <div class="form-group">
-                        <div class="col-md-10">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-md-10">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-md-10">
-                        </div>
-                    </div>
-
-
-
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.Par, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -115,10 +55,117 @@
                 </div>
 
             </div>
+        </div>
+    </div>
 
-            <div class="col-lg-2"></div>
-            <div class="panel panel-primary col-lg-5">
-                <div class="panel panel-heading">Contact Information</div>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-primary">
+                <div class="panel-heading">Front Nine</div>
+                <div class="panel-body">
+                    <table class="table table-bordered form-horizontal">
+                        <thead>
+                            <tr>
+                                <th class="hole" scope="col">
+                                    Hole
+                                </th>
+                                @for (int i = 0; i < Model.FrontNine.Count; i++)
+                                {
+                                    <th scope="col">
+                                        @Html.DisplayFor(model => Model.FrontNine[i].HoleNumber, new { @class = "textboxform-control" })
+                                        @Html.HiddenFor(model => Model.FrontNine[i].HoleNumber)
+                                        @Html.HiddenFor(model => Model.FrontNine[i].HoleId)
+                                    </th>
+                                }
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th class="par" scope="col">
+                                    Par
+                                </th>
+                                @for (int i = 0; i < Model.FrontNine.Count; i++)
+                                {
+                                    <td scope="col">
+                                        @Html.TextBoxFor(model => Model.FrontNine[i].Par, new { @class = "textboxform-control" })
+                                    </td>
+                                }
+                            </tr>
+
+                            <tr>
+                                <th class="distance" scope="col">
+                                    Distance (Yards)
+                                </th>
+                                @for (int i = 0; i < Model.FrontNine.Count; i++)
+                                {
+                                    <td scope="col">
+                                        @Html.TextBoxFor(model => Model.FrontNine[i].Distance, new { @class = "textboxform-control" })
+                                    </td>
+                                }
+                            </tr>
+                        </tbody>
+
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-primary">
+                <div class="panel-heading">Back Nine</div>
+                <div class="panel-body">
+                    <table class="table table-bordered form-horizontal">
+                        <thead>
+                            <tr>
+                                <th class="hole" scope="col">
+                                    Hole
+                                </th>
+                                @for (int i = 0; i < Model.BackNine.Count; i++)
+                                {
+                                    <th scope="col">
+                                        @Html.DisplayFor(model => Model.BackNine[i].HoleNumber, new { @class = "textboxform-control" })
+                                        @Html.HiddenFor(model => Model.BackNine[i].HoleNumber)
+                                        @Html.HiddenFor(model => Model.BackNine[i].HoleId)
+                                    </th>
+                                }
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th class="par" scope="col">
+                                    Par
+                                </th>
+                                @for (int i = 0; i < Model.BackNine.Count; i++)
+                                {
+                                    <td scope="col">
+                                        @Html.TextBoxFor(model => Model.BackNine[i].Par, new { @class = "textboxform-control" })
+                                    </td>
+                                }
+                            </tr>
+
+                            <tr>
+                                <th class="distance" scope="col">
+                                    Distance (Yards)
+                                </th>
+                                @for (int i = 0; i < Model.BackNine.Count; i++)
+                                {
+                                    <td scope="col">
+                                        @Html.TextBoxFor(model => Model.BackNine[i].Distance, new { @class = "textboxform-control" })
+                                    </td>
+                                }
+                            </tr>
+                        </tbody>
+
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-info">
+                <div class="panel-heading">Contact Information</div>
                 <div class="panel-body form-horizontal">
 
                     <div class="form-group">
@@ -179,127 +226,26 @@
                     </div>
                 </div>
             </div>
-
         </div>
-
-        <div class="row">
-            <div class="panel panel-primary col-lg-12">
-                <div class="panel panel-heading">Front Nine</div>
-                <div class="panel-body">
-                    <table class="table table-bordered form-horizontal">
-                        <thead>
-                            <tr>
-                                <th class="hole" scope="col">
-                                    Hole
-                                </th>
-                                @for (int i = 0; i < Model.FrontNine.Count; i++)
-                                {
-                                    <th scope="col">
-                                        @Html.DisplayFor(model => Model.FrontNine[i].HoleNumber, new { @class = "textboxform-control" })
-                                        @Html.HiddenFor(model => Model.FrontNine[i].HoleNumber)
-                                        @Html.HiddenFor(model => Model.FrontNine[i].HoleId)
-                                    </th>
-                                }
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th class="par" scope="col">
-                                    Par
-                                </th>
-                                @for (int i = 0; i < Model.FrontNine.Count; i++)
-                                {
-                                    <td scope="col">
-                                        @Html.TextBoxFor(model => Model.FrontNine[i].Par, new { @class = "textboxform-control" })
-                                    </td>
-                                }
-                            </tr>
-
-                            <tr>
-                                <th class="distance" scope="col">
-                                    Distance (Yards)
-                                </th>
-                                @for (int i = 0; i < Model.FrontNine.Count; i++)
-                                {
-                                    <td scope="col">
-                                        @Html.TextBoxFor(model => Model.FrontNine[i].Distance, new { @class = "textboxform-control" })
-                                    </td>
-                                }
-                            </tr>
-                        </tbody>
-
-                    </table>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="panel panel-primary col-lg-12">
-                <div class="panel panel-heading">Back Nine</div>
-                <div class="panel-body">
-                    <table class="table table-bordered form-horizontal">
-                        <thead>
-                            <tr>
-                                <th class="hole" scope="col">
-                                    Hole
-                                </th>
-                                @for (int i = 0; i < Model.BackNine.Count; i++)
-                                {
-                                    <th scope="col">
-                                        @Html.DisplayFor(model => Model.BackNine[i].HoleNumber, new { @class = "textboxform-control" })
-                                        @Html.HiddenFor(model => Model.BackNine[i].HoleNumber)
-                                        @Html.HiddenFor(model => Model.BackNine[i].HoleId)
-                                    </th>
-                                }
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th class="par" scope="col">
-                                    Par
-                                </th>
-                                @for (int i = 0; i < Model.BackNine.Count; i++)
-                                {
-                                    <td scope="col">
-                                        @Html.TextBoxFor(model => Model.BackNine[i].Par, new { @class = "textboxform-control" })
-                                    </td>
-                                }
-                            </tr>
-
-                            <tr>
-                                <th class="distance" scope="col">
-                                    Distance (Yards)
-                                </th>
-                                @for (int i = 0; i < Model.BackNine.Count; i++)
-                                {
-                                    <td scope="col">
-                                        @Html.TextBoxFor(model => Model.BackNine[i].Distance, new { @class = "textboxform-control" })
-                                    </td>
-                                }
-                            </tr>
-                        </tbody>
-
-                    </table>
-                </div>
-            </div>
-        </div>
-
-        <br />
-        <div class="row">
-            <div class="col-lg-5">
-                <a href="@Url.Action("Index", "Course")"
-                   class="btn btn-block btn-info col-lg-2">
-                    Back to Course Index
-                </a>
-            </div>
-            <div class=" col-lg-2"></div>
-            <div class="col-lg-5">
-
-                <button type="submit" value="Save" class="btn btn-block btn-success col-lg-2">Edit</button>
-
-            </div>
-        </div>
-
     </div>
+
+    <br />
+    <div class="row">
+        <div class="col-lg-5">
+            <a href="@Url.Action("Index", "Course")"
+               class="btn btn-block btn-info col-lg-2">
+                Back to Course Index
+            </a>
+        </div>
+        <div class=" col-lg-2"></div>
+        <div class="col-lg-5">
+
+            <button type="submit" value="Save" class="btn btn-block btn-success col-lg-2">Edit</button>
+
+        </div>
+    </div>
+
+</div>
 }
 
 @section Scripts {
