--- a/ForeScore.WebMVC/Views/Follow/Delete.cshtml
+++ b/ForeScore.WebMVC/Views/Follow/Delete.cshtml
@@ -12,24 +12,25 @@
         <h2>Remove a Follow</h2>
 
         <div class="row">
-
-            <div class="panel panel-primary col-lg-12">
-                <div class="panel panel-heading">Follow Information</div>
-                <div class="panel-body form-horizontal">
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.FullName, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.DisplayFor(model => model.FullName, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="col-lg-12">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">Follow Information</div>
+                    <div class="panel-body form-horizontal">
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.FullName, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.DisplayFor(model => model.FullName, new { htmlAttributes = new { @class = "form-control" } })
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.DisplayFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.DisplayFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                            </div>
                         </div>
-                    </div>
 
+                    </div>
                 </div>
             </div>
         </div>
