--- a/ForeScore.WebMVC/Views/Follow/Index.cshtml
+++ b/ForeScore.WebMVC/Views/Follow/Index.cshtml
@@ -16,7 +16,8 @@
     <div class="row">
 
         <div class="col-lg-6">
-            <div class="panel panel-default">
+
+            <div class="panel panel-primary">
                 <div class="panel-heading">Users You Are Following</div>
                 <div class="panel-body">
                     <table class="table table-bordered table-striped">
