--- a/ForeScore.WebMVC/Views/Round/Index.cshtml
+++ b/ForeScore.WebMVC/Views/Round/Index.cshtml
@@ -7,73 +7,76 @@
 <div class="container">
 
     <h2>Your Rounds</h2>
-    <div class="panel-heading col-lg-3"></div>
+
     <div class="panel-heading col-lg-6">
         <a href="/Round/Create" class="btn btn-primary btn-block">
             Add A New Round
         </a>
     </div>
-    <div class="col-lg-3"></div>
 
-    <div class="row col-lg-12">
-        <div class="panel panel-default">
-            <div class="panel-body panel-default ">
-                <table class="table table-bordered table-striped">
-                    <thead>
-                        <tr>
-                            <th scope="row">
-                                @Html.DisplayNameFor(model => model.CourseName)
-                            </th>
-                            <th scope="row">
-                                @Html.DisplayNameFor(model => model.Description)
-                            </th>
-                            <th scope="row">
-                                @Html.DisplayNameFor(model => model.Score)
-                            </th>
-                            <th scope="row">
-                                @Html.DisplayNameFor(model => model.IsPublic)
-                            </th>
-                            <th scope="row">
-                                @Html.DisplayNameFor(model => model.IsFeatured)
-                            </th>
-                            <th scope="row">
-                                @Html.DisplayNameFor(model => model.DateOfRound)
-                            </th>
-                            <th scope="row"></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model)
-                        {
+
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">Courses</div>
+                <div class="panel-body panel-default ">
+                    <table class="table table-bordered table-striped">
+                        <thead>
                             <tr>
-                                <td scope="row">
-                                    @Html.DisplayFor(modelItem => item.CourseName)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Description)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Score)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.IsPublic)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.IsFeatured)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.DateOfRound)
-                                </td>
-
-                                <td>
-                                    @Html.ActionLink("Edit", "Edit", new { id = item.RoundId }) |
-                                    @Html.ActionLink("Details", "Details", new { id = item.RoundId }) |
-                                    @Html.ActionLink("Delete", "Delete", new { id = item.RoundId })
-                                </td>
+                                <th scope="row">
+                                    @Html.DisplayNameFor(model => model.CourseName)
+                                </th>
+                                <th scope="row">
+                                    @Html.DisplayNameFor(model => model.Description)
+                                </th>
+                                <th scope="row">
+                                    @Html.DisplayNameFor(model => model.Score)
+                                </th>
+                                <th scope="row">
+                                    @Html.DisplayNameFor(model => model.IsPublic)
+                                </th>
+                                <th scope="row">
+                                    @Html.DisplayNameFor(model => model.IsFeatured)
+                                </th>
+                                <th scope="row">
+                                    @Html.DisplayNameFor(model => model.DateOfRound)
+                                </th>
+                                <th scope="row"></th>
                             </tr>
-                        }
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td scope="row">
+                                        @Html.DisplayFor(modelItem => item.CourseName)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Description)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Score)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.IsPublic)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.IsFeatured)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.DateOfRound)
+                                    </td>
+
+                                    <td>
+                                        @Html.ActionLink("Edit", "Edit", new { id = item.RoundId }) |
+                                        @Html.ActionLink("Details", "Details", new { id = item.RoundId }) |
+                                        @Html.ActionLink("Delete", "Delete", new { id = item.RoundId })
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
