--- a/ForeScore.WebMVC/Views/Round/Delete.cshtml
+++ b/ForeScore.WebMVC/Views/Round/Delete.cshtml
@@ -16,13 +16,14 @@
         <br />
 
         <div class="row">
-            <div class="col-lg-5">
-                <div class="panel panel-primary">
+            <div class="col-lg-12">
+                <div class="panel panel-info">
                     <div class="panel-heading">Course Information</div>
                     <div class="panel-body">
                         <dl class="dl-horizontal">
 
-                            @Html.HiddenFor(model => model.RoundId)
+                            @Html.HiddenFor(model => model.CourseId)
+                            @Html.HiddenFor(model => model.CourseDetail.CourseId)
 
                             <dt>
                                 Course Name:
@@ -56,81 +57,9 @@
                                 @Html.DisplayFor(model => model.CourseDetail.Rating)
                             </dd>
                         </dl>
-                        <br />
-                        <br />
-                        <br />
-                    </div>
-                </div>
-
-            </div>
-            <div class="col-lg-2"></div>
-
-            <div class="col-lg-5">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">Contact Information</div>
-                    <div class="panel-body">
-                        <dl class="dl-horizontal">
-                            <dt>
-                                @Html.DisplayNameFor(model => model.CourseDetail.Address):
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.CourseDetail.Address)
-                            </dd>
-
-                            <dt>
-                                @Html.DisplayNameFor(model => model.CourseDetail.City):
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.CourseDetail.City)
-                            </dd>
-
-                            <dt>
-                                @Html.DisplayNameFor(model => model.CourseDetail.StateOfResidence):
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.CourseDetail.StateOfResidence)
-                            </dd>
-
-                            <dt>
-                                @Html.DisplayNameFor(model => model.CourseDetail.ZipCode):
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.CourseDetail.ZipCode)
-                            </dd>
-
-                            <dt>
-                                @Html.DisplayNameFor(model => model.CourseDetail.PhoneNumber):
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.CourseDetail.PhoneNumber)
-                            </dd>
-
-                            <dt>
-                                @Html.DisplayNameFor(model => model.CourseDetail.EmailAddress):
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.CourseDetail.EmailAddress)
-                            </dd>
-
-                            <dt>
-                                @Html.DisplayNameFor(model => model.CourseDetail.Website):
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.CourseDetail.Website)
-                            </dd>
-
-                        </dl>
                     </div>
                 </div>
             </div>
-
         </div>
 
 
@@ -139,7 +68,7 @@
                 <div class="panel panel-primary">
                     <div class="panel-heading">Front Nine</div>
                     <div class="panel-body">
-                        <table class="table table-bordered">
+                        <table class="table table-bordered table-striped">
                             <thead>
                                 <tr>
                                     <th class="hole" scope="col">
@@ -257,7 +186,7 @@
                 <div class="panel panel-primary">
                     <div class="panel-heading">Back Nine</div>
                     <div class="panel-body">
-                        <table class="table table-bordered">
+                        <table class="table table-bordered table-striped">
                             <thead>
                                 <tr>
                                     <th class="hole" scope="col">
