--- a/ForeScore.WebMVC/Views/Round/Edit.cshtml
+++ b/ForeScore.WebMVC/Views/Round/Edit.cshtml
@@ -14,16 +14,14 @@
         <br />
 
         <div class="row">
-
-            <div class="row">
-
-                <div class="panel panel-primary col-lg-5">
-                    <div class="panel panel-heading">Course Information</div>
+            <div class="col-lg-12">
+                <div class="panel panel-info">
+                    <div class="panel-heading">Course Information</div>
                     <div class="panel-body">
                         <dl class="dl-horizontal">
 
                             @Html.HiddenFor(model => model.CourseId)
-                            @Html.HiddenFor(model => model.RoundId)
+                            @Html.HiddenFor(model => model.CourseDetail.CourseId)
 
                             <dt>
                                 Course Name:
@@ -57,85 +55,18 @@
                                 @Html.DisplayFor(model => model.CourseDetail.Rating)
                             </dd>
                         </dl>
-                        <br />
-                        <br />
-                        <br />
-                    </div>
-
-                </div>
-                <div class="panel col-lg-2"></div>
-                <div class="panel panel-primary col-lg-5">
-                    <div class="panel panel-heading">Contact Information</div>
-                    <div class="panel-body">
-                        <dl class="dl-horizontal">
-                            <dt>
-                                @Html.DisplayNameFor(model => model.CourseDetail.Address):
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.CourseDetail.Address)
-                            </dd>
-
-                            <dt>
-                                @Html.DisplayNameFor(model => model.CourseDetail.City):
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.CourseDetail.City)
-                            </dd>
-
-                            <dt>
-                                @Html.DisplayNameFor(model => model.CourseDetail.StateOfResidence):
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.CourseDetail.StateOfResidence)
-                            </dd>
-
-                            <dt>
-                                @Html.DisplayNameFor(model => model.CourseDetail.ZipCode):
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.CourseDetail.ZipCode)
-                            </dd>
-
-                            <dt>
-                                @Html.DisplayNameFor(model => model.CourseDetail.PhoneNumber):
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.CourseDetail.PhoneNumber)
-                            </dd>
-
-                            <dt>
-                                @Html.DisplayNameFor(model => model.CourseDetail.EmailAddress):
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.CourseDetail.EmailAddress)
-                            </dd>
-
-                            <dt>
-                                @Html.DisplayNameFor(model => model.CourseDetail.Website):
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.CourseDetail.Website)
-                            </dd>
-
-                        </dl>
                     </div>
                 </div>
-
             </div>
+        </div>
 
 
-            <div class="row">
-                <div class="panel panel-primary col-lg-12">
-                    <div class="panel panel-heading">Front Nine</div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">Front Nine</div>
                     <div class="panel-body">
-                        <table class="table table-bordered">
+                        <table class="table table-bordered table-striped">
                             <thead>
                                 <tr>
                                     <th class="hole" scope="col">
@@ -251,11 +182,13 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="panel panel-primary col-lg-12">
-                    <div class="panel panel-heading">Back Nine</div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">Back Nine</div>
                     <div class="panel-body">
-                        <table class="table table-bordered">
+                        <table class="table table-bordered table-striped">
                             <thead>
                                 <tr>
                                     <th class="hole" scope="col">
@@ -368,12 +301,13 @@
                     </div>
                 </div>
             </div>
-            <br />
+        </div>
+        <br />
 
-            <div class="row">
-
-                <div class="panel panel-primary col-lg-12">
-                    <div class="panel panel-heading">Round Information</div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">Round Information</div>
                     <div class="panel-body form-horizontal">
                         <div class="form-group">
                             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -413,24 +347,23 @@
                     </div>
                 </div>
             </div>
-
-
-            <br />
-            <div class="row">
-                <div class="col-lg-5">
-                    <a href="@Url.Action("Index", "Round")"
-                       class="btn btn-block btn-info col-lg-2">
-                        Discard Round Edit
-                    </a>
-                </div>
-                <div class=" col-lg-2"></div>
-                <div class="col-lg-5">
-
-                    <button type="submit" value="Save" class="btn btn-block btn-success col-lg-2">Edit Round</button>
-
-                </div>
-            </div>
-
         </div>
+        <br />
+        <div class="row">
+            <div class="col-lg-5">
+                <a href="@Url.Action("Index", "Round")"
+                   class="btn btn-block btn-info col-lg-2">
+                    Discard Round Edit
+                </a>
+            </div>
+            <div class=" col-lg-2"></div>
+            <div class="col-lg-5">
+
+                <button type="submit" value="Save" class="btn btn-block btn-success col-lg-2">Edit Round</button>
+
+            </div>
+        </div>
+
+
     </div>
 }
