--- a/ForeScore.WebMVC/Views/Course/Index.cshtml
+++ b/ForeScore.WebMVC/Views/Course/Index.cshtml
@@ -6,12 +6,14 @@
 
 <div class="container">
     <h2>Your Courses</h2>
-    <div class="panel-heading col-lg-3"></div>
-    <div class="panel-heading col-lg-6">
-        <a href="/Course/Create" class="btn btn-primary btn-block">
-            Add A New Course
-        </a>
+    <div class="row">
+        <div class="col-lg-6">
+            <a href="/Course/Create" class="btn btn-success btn-block">
+                Add A New Course
+            </a>
+        </div>
     </div>
+    <br />
 
     <div class="row">
         <div class="col-lg-12">
